--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,29 @@
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
 plugins {
-    id 'java'
     id 'java-library'
     id 'maven-publish'
-    id 'org.springframework.boot' version '3.4.1'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version '3.4.1' apply false
 }
 
+apply plugin: 'io.spring.dependency-management'
+
 dependencies {
-    api 'org.springframework.boot:spring-boot-starter-web'
-    api 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    api 'org.springframework.boot:spring-boot-autoconfigure'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-autoconfigure'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor:3.3.2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.18.1' // Use the latest version
+
+}
+
+dependencyManagement {
+    imports {
+        mavenBom SpringBootPlugin.BOM_COORDINATES
+    }
 }
 
 jar {
@@ -20,18 +31,8 @@ jar {
     enabled = true
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.1"
-        mavenBom "org.springframework.boot:spring-boot-starter-parent:3.4.1"
-    }
-}
 repositories {
     mavenCentral()
-}
-
-bootJar {
-    enabled = false
 }
 
 jar {
@@ -39,11 +40,23 @@ jar {
 }
 
 group = 'io.github.dineshsolanki'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.3-SNAPSHOT'
 
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = "io.github.dineshsolanki"
+            artifactId = "multitenant-spring-mongodb"
+            version = "0.0.3-SNAPSHOT"
+
+            artifact jar
+        }
     }
 }
 
